[platform] IJPL-231306 Impersonated problem descriptors lead to NPE
Merge-request: IJ-MR-188812
Merged-by: Ilia Permiashkin <ilia.permiashkin@jetbrains.com>

Space-RevId: dcbccddd3d98d00b2f1312fb5ca42ee24116eb85

GitOrigin-RevId: 4b41a9f9383a47804379cc62b3e2c2075518bae3